src/main/java/com/example/whispy/global/error/ErrorResponse.java
package com.example.whispy.global.error;

import lombok.Builder;
import org.springframework.http.HttpStatus;
@Builder
public record ErrorResponse(HttpStatus status, String message) {
}
